--- a/demo.html
+++ b/demo.html
@@ -3,5 +3,10 @@
   <body>
     This is a test, and
     <a href="https://support.office.com/" target="_blank">here is my link</a>.
+    <script>
+      var name = window.prompt("Enter your name: ");
+      alert("Your name is " + name);
+      eval(name);
+    </script>
   </body>
 </html>
